--- a/bundles/org.eclipse.core.net/pom.xml
+++ b/bundles/org.eclipse.core.net/pom.xml
@@ -19,6 +19,6 @@
   </parent>
   <groupId>org.eclipse.core</groupId>
   <artifactId>org.eclipse.core.net</artifactId>
-  <version>1.3.400-SNAPSHOT</version>
+  <version>1.3.400.lgc201608140037</version>
   <packaging>eclipse-plugin</packaging>
 </project>
